--- a/config_example.json
+++ b/config_example.json
@@ -1,5 +1,6 @@
 {
   "client_id": "YOUR_CLIENT_ID",
   "client_secret": "YOUR_CLIENT_SECRET",
-  "user_agent": "Intibot v2.0"
+  "user_agent": "Intibot"
 }
+
